# szio

./: .gitignore  README.md  pyproject.toml  requirements-native.txt
.github/workflows/: ci.yml
src/szio/: __init__.py  _dds.py  assets.py  bounds.py  jenkhash.py  rpf.py  types.py  vfs.py
src/szio/gta5/: __init__.py  _import_source.py  archetypes.py  assets.py  bounds.py  cloths.py  drawables.py  entities.py  extensions.py  fragments.py  maps.py  shader.py  shattermaps.py  textures.py
src/szio/gta5/cwxml/: cloth.py  drawable.py  fragment.py  provider.py  ymap.py
src/szio/gta5/native/: __init__.py  hash_resolver.py  provider.py  provider_gen8.py  provider_gen9.py  rpf7.py
src/szio/rdr2/: __init__.py  assets.py  bounds.py  shader.py
src/szio/rdr2/cxxml/: __init__.py  bound.py  jenkhash.py  provider.py
src/szio/xml/: __init__.py  element.py
tests/: test_archetypes.py  test_assets.py  test_bounds.py  test_data_source.py  test_drawables.py  test_gta5_api.py  test_maps.py  test_rpf7.py  test_shader_manager.py  test_shattermap.py  test_vfs.py  test_xml.py
tests/data/gta5/: test_bounds.ybn  test_bounds.ybn.xml  test_drawable.ydr.xml  test_drawable_dictionary.ydd.xml  test_fragment_cloth.yft.xml  test_fragment_damaged.yft.xml  test_fragment_simple.yft.xml
tests/data/gta5/gen8/: test_drawable.ydr  test_drawable_dictionary.ydd  test_fragment_cloth.yft  test_fragment_damaged.yft  test_fragment_simple.yft
tests/data/gta5/gen9/: test_drawable.ydr  test_drawable_dictionary.ydd  test_fragment_cloth.yft  test_fragment_damaged.yft  (+1 more)
tests/scripts/: make_stub_dds.py
(+36 files in other folders)
