[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "szio"
version = "1.1.0.dev2"
authors = [{name="alexguirre", email="alexguirre.aa@gmail.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">= 3.10"
dependencies = ["numpy >= 1.23.0"]


[project.optional-dependencies]
test = ["pytest >= 8.4.0"]

[project.urls]
homepage = "https://sollumz.org/"
source = "https://github.com/Sollumz/szio"
issues = "https://github.com/Sollumz/szio/issues"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.black]
line-length = 120
